--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -1,14 +1,92 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+
 .warehouse-list {
-  width: 21.4375rem;
+  width: 90%;
   margin: 0 auto;
+  border: black solid 1px; // REMOVE
+
+  @include tablet {
+  }
 
   &__header {
     display: flex;
     flex-direction: column;
+    border-bottom: 1px $placeholder-text solid;
+
+    @include tablet {
+      border: none;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  &__title {
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+    padding: 1rem 1.5rem 0;
+
+    @include tablet {
+      font-size: 2rem;
+      line-height: 2.5rem;
+      padding: 0;
+      margin-left: 2rem;
+    }
   }
 
   &__cta-wrapper {
     display: flex;
     flex-direction: column;
+    padding: 0 1.5rem 1rem;
+    align-items: center;
+
+    @include tablet {
+      width: 70%;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 0;
+      margin-right: 1rem;
+    }
+  }
+
+  &__search-bar {
+    border: 1px $placeholder-text solid;
+    height: 2.25rem;
+    padding-left: 0.7rem;
+    border-radius: 20px;
+    margin-bottom: 1rem;
+    max-width: 25.75rem;
+    width: 100%;
+
+    @include tablet {
+      height: 2.25rem;
+      width: 11.6rem;
+      margin: 0;
+      min-width: 11.6rem;
+      width: 40%;
+      max-width: 17.125rem;
+    }
+  }
+
+  &__button {
+    color: $instock-white;
+    background-color: $instock-indigo;
+    border: none;
+    height: 2.25rem;
+    border-radius: 20px;
+    max-width: 25.75rem;
+    width: 100%;
+
+    @include tablet {
+      width: 11.6rem;
+      margin-left: 1rem;
+      height: 2.375rem;
+    }
+
+    @include desktop {
+      margin-right: 1rem;
+    }
   }
 }
