--- a/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -2,11 +2,11 @@
 @use "../../styles/partials/variables" as *;
 
 .warehouse {
-  width: 60%;
+  width: 90%;
   margin: auto;
   &__details {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
   }
 
@@ -32,7 +32,7 @@
   gap: 5px;
   background-color: $instock-indigo;
   color: $instock-white;
-  border-radius: 10px;
+  border-radius: 50px;
   border: solid $instock-indigo;
 }
 
@@ -40,7 +40,5 @@
   display: flex;
   flex-direction: row;
   gap: 2rem;
-  border-left: solid 2px $divider-lines;
-  padding-left: 2rem;
-  padding-right: 10rem;
+  border-top: solid 2px #bdc5d5;
 }
