--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -2,6 +2,7 @@
 	background-color: #232940;
 	display: flex;
 	flex-direction: column;
+	margin: 0;
 
 	&__logo {
 		margin: 0 auto;
@@ -12,18 +13,19 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		list-style: none;
 		padding: 0;
-		margin-bottom: 4rem;
+		margin: 1rem 0 4rem;
 	}
 
 	&__title {
 		color: white;
-		font-size: 1rem;
+		font-size: 0.7rem;
 		width: 50%;
 		border-radius: 0.5rem;
 		background-color: #13182c;
 		text-align: center;
 		margin: 0 1rem;
+		text-decoration: none;
+		padding: 0.3rem 0;
 	}
 }
