--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,3 +1,5 @@
+@use "../../styles/partials/mixins" as *;
+
 .nav {
   background-color: #232940;
   display: flex;
@@ -15,6 +17,10 @@
     align-items: center;
     padding: 0;
     margin: 1rem 0 4rem;
+
+    @include tablet {
+      flex-direction: row;
+    }
   }
 
   &__title {
