--- a/src/components/Warehouse/Warehouse.scss
+++ b/src/components/Warehouse/Warehouse.scss
@@ -5,22 +5,49 @@
   border-bottom: 1px $divider-lines solid;
   margin: 0 auto;
 
+  @include tablet {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0 3rem;
+  }
+
+  &:hover {
+    background-color: rgb(240, 244, 253);
+  }
+
   &__info-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
+
+    @include tablet {
+      justify-content: space-evenly;
+      width: 100%;
+      padding: 0;
+    }
   }
 
   &__info-col {
     display: flex;
     flex-direction: column;
     width: 45%;
+
+    @include tablet {
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-around;
+    }
   }
 
   &__info-subheading {
     color: $placeholder-text;
     margin-bottom: 0.2rem;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__link-wrapper {
@@ -33,8 +60,18 @@
     color: $instock-indigo;
   }
 
+  &__info-item {
+    @include tablet {
+      width: 50%;
+    }
+  }
+
   &__info {
     margin: 0;
+
+    &--block {
+      display: block;
+    }
   }
 
   &__icons-wrapper {
@@ -42,6 +79,10 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 1rem;
+
+    @include tablet {
+      gap: 1rem;
+    }
   }
 
   &__icon {
