--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -6,7 +6,14 @@
   margin: 0 auto;
   min-width: 15rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 3px 0px;
-  border-radius: 3px;
+  border-radius: 5px;
+  position: relative;
+  bottom: 5rem;
+  background-color: $instock-white;
+
+  @include tablet {
+    bottom: 6.6rem;
+  }
 
   @include desktop {
     width: 80%;
