--- a/src/components/Warehouse/Warehouse.scss
+++ b/src/components/Warehouse/Warehouse.scss
@@ -54,6 +54,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    cursor: pointer;
   }
 
   &__link {
@@ -87,5 +88,6 @@
 
   &__icon {
     width: 1.75rem;
+    cursor: pointer;
   }
 }
