--- a/src/components/InventoryDetails/InventoryDetails.scss
+++ b/src/components/InventoryDetails/InventoryDetails.scss
@@ -29,7 +29,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem;
+    padding: 1rem 0.5rem;
     border-bottom: 2px solid $divider-lines;
 
     @include tablet {
@@ -39,13 +39,14 @@ p {
 
   &__wrapper {
     display: flex;
-    gap: 0.5rem;
     align-items: center;
   }
 
   &__arrow {
     display: flex;
     align-items: center;
+    background-color: $instock-white;
+    border: none;
   }
 
   &__header {
