--- a/src/components/InventoryDetails/InventoryDetails.scss
+++ b/src/components/InventoryDetails/InventoryDetails.scss
@@ -106,6 +106,7 @@ p {
   &__title {
     font-size: 0.8rem;
     margin-bottom: 0.5rem;
+    color: $placeholder-text;
 
     &--top {
       margin-top: 2rem;
@@ -114,6 +115,7 @@ p {
 
   &__status {
     font-size: 0.8rem;
+    padding: 0.2rem 0.5rem;
   }
 
   &__section {
