add delete warehouse functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,11 @@
 .loading {
   text-align: center;
 }
+
+.background-blur {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+}
