--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -11,3 +11,15 @@
     @content;
   }
 }
+
+@mixin in-stock {
+  border-radius: 1rem;
+  color: $label-instock;
+  background-color: #eef6f4;
+}
+
+@mixin out-of-stock {
+  border-radius: 1rem;
+  color: $label-outofstock;
+  background-color: #fbf3ee;
+}
