--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -9,3 +9,19 @@
 body {
   margin: 0;
 }
+
+textarea {
+  font-family: "Titillium";
+}
+
+input {
+  font-family: "Titillium";
+}
+
+select {
+  font-family: "Titillium";
+}
+
+button {
+  font-family: "Titillium";
+}
