add link to edit button

--- a/src/components/InventoryDetails/InventoryDetails.scss
+++ b/src/components/InventoryDetails/InventoryDetails.scss
@@ -9,6 +9,10 @@ p {
   margin: 0;
 }
 
+.page {
+  text-align: center;
+}
+
 .inventory-details {
   box-shadow: 1px 1px 10px $divider-lines;
   margin: 0 1rem;
