--- a/src/components/Inventory/Inventory.scss
+++ b/src/components/Inventory/Inventory.scss
@@ -109,6 +109,7 @@
     margin: 0.5rem 1.5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 1rem;
 
     @include tablet {
