fix warehouse details heading styling

--- a/src/components/TableHeadings/TableHeadings.scss
+++ b/src/components/TableHeadings/TableHeadings.scss
@@ -2,24 +2,13 @@
 @use "../../styles/partials/mixins" as *;
 
 .table-headings {
-  display: none;
-  background-color: rgba(237, 235, 235, 0.34);
-  height: 2.5rem;
-
-  @include tablet {
-    display: flex;
-    padding-left: 3rem;
-    min-width: 125px;
-  }
+  @include table-headings;
 
   &__list {
-    font-size: 0.75rem;
-    display: flex;
-    gap: 1rem;
+    @include table-headings-list;
 
     @include tablet {
-      justify-content: center;
-      width: 100%;
+      padding-left: 3rem;
     }
   }
 
