--- a/src/pages/EditInventoryPage/EditInventoryPage.scss
+++ b/src/pages/EditInventoryPage/EditInventoryPage.scss
@@ -157,6 +157,10 @@
     padding-left: 0;
     justify-content: space-between;
   }
+
+  &__input {
+    cursor: pointer;
+  }
 }
 
 .submit__wrapper {
